changed index file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>crap-portfolio</title>
 </head>
 <body>
-    
+    <header>
+        Welcome to the Portfolio Site
+    </header>
+    <div>
+        <h1>Portfolio by experts</h1>
+    </div>
 </body>
 </html>
